--- a/Test Automation Core/TestAutomationFramework.csproj
+++ b/Test Automation Core/TestAutomationFramework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dialogs\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
