--- a/Test Automation Core/TestAutomationFramework.csproj
+++ b/Test Automation Core/TestAutomationFramework.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Data\SmokeTestData\" />
-    <Folder Include="UIElements\Wizards\Images\" />
+    <Folder Include="ATLASti\UIElements\Wizards\Images\" />
   </ItemGroup>
 
 </Project>
